[package]
name = "circuit_generation"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
[dependencies]
rccell = { workspace = true }
zkay-derive={workspace=true}
circuit_helper={workspace=true}
 proving_scheme={workspace = true }
 zkay-compiler={workspace = true }
 zkay-config={workspace = true }
 jsnark_interface={workspace = true }
 zkay-transaction={workspace = true }
 type_check={workspace = true }
 zkay-utils={workspace = true }
 zkay_ast={workspace = true }
rayon={ workspace = true }
lazy_static = { workspace = true }
hex={workspace=true}
num_cpus={ workspace = true }
zkp-u256 = { workspace = true }