[package]
name = "proving_scheme"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
[dependencies]
rccell = { workspace = true }
circuit_helper={workspace=true}
circuit-helper-config={workspace=true}
 privacy={workspace = true }
 zkay-config={workspace = true }
 zkay-utils={workspace = true }
lazy_static = { workspace = true }
hex={ workspace = true }
zkp-u256 = { workspace = true }