[package]
name = "transformation"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
[dependencies]
rccell = { workspace = true }
zkay-derive = { workspace = true }
circuit_helper={workspace=true}
 privacy={workspace = true }
 solidity={workspace = true }
 zkay-config={workspace = true }
 zkay-crypto={workspace = true }
 zkay-transaction={workspace = true }
 zkay_ast={workspace = true }
regex ={ workspace = true }
eyre ={ workspace = true }
fancy-regex ={ workspace = true }